Inclusão do método de deleção do contrato e de geração do contrato
